<resources>
    <string name="app_name">infi</string>
    <string name="create_new_btn">Create New</string>
    <string name="my_decks">My Decks</string>
    <string name="deck_name">Deck Name</string>
    <string name="study_btn">Study Now</string>
    <string name="new_carrd">New Card</string>
    <string name="learning_card">Learning Card</string>
    <string name="review_card">Review Card</string>
    <string name="exit_study_btn">Exit</string>
    <string name="show_answer_btn">Show Answer</string>
    <string name="again_level_btn">Again</string>
    <string name="hard_level_btn">Hard</string>
    <string name="good_level_btn">Good</string>
    <string name="easy_level_btn">Easy</string>

</resources>