<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txt_again_delay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="again_t"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:layout_gravity="center"/>
        <Button
            android:id="@+id/btn_again_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/again_level_btn"
            android:layout_gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txt_hard_delay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="hard_t"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:gravity="center_vertical"
            android:layout_gravity="center"/>
        <Button
            android:id="@+id/btn_hard_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hard_level_btn"
            android:layout_gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txt_good_delay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="good_t"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:layout_gravity="center"/>
        <Button
            android:id="@+id/btn_good_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_level_btn"
            android:layout_gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txt_easy_delay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="easy_t"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:layout_gravity="center"/>
        <Button
            android:id="@+id/btn_easy_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/easy_level_btn"
            android:layout_gravity="center"/>
    </LinearLayout>
</LinearLayout>