<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/study"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreatDeck">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/border_bottom"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="56dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/text_view_deck_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/deck_name"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:layout_marginStart="0dp"
                android:gravity="center_vertical"/>

            <Button
                android:id="@+id/btn_exit_study"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corners_btn"
                android:paddingHorizontal="30dp"
                android:paddingVertical="10dp"
                android:text="@string/exit_study_btn"
                android:textSize="18sp" />
        </LinearLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="70dp"
            android:layout_weight="4">
            <TextView
                android:id="@+id/txt_front_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="content_of_front"
                android:background="@color/secondary"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:gravity="center" />
            <TextView
                android:id="@+id/txt_back_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="content_of_back"
                android:alpha="0"
                android:textColor="@android:color/white"
                android:background="@color/secondary"
                android:textSize="14sp"
                android:gravity="center" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="vertical"
            android:gravity="bottom">
            <Button
                android:id="@+id/show_answer_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_answer_btn" />
            <LinearLayout
                android:id="@+id/layout_level_btns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                >
                <include layout="@layout/level_btns"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
